desktop dev done

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="grid-box">
-            <img src="/assets/png/burger.png" alt="">
+            <img src="/assets/png/Group.png" alt="">
             <div class="recette-info">
               <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
               <div class="moreinfo">
@@ -145,7 +145,7 @@
             </div>
           </div>
           <div class="grid-box">
-            <img src="/assets/png/burger.png" alt="">
+            <img src="/assets/png/Group-1.png" alt="">
             <div class="recette-info">
               <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
               <div class="moreinfo">
@@ -160,106 +160,162 @@
             </div>
             </div>
           </div>
-          <div class="grid">
-            <div class="grid-box">
-              <img src="/assets/png/burger.png" alt="">
-              <div class="recette-info">
-                <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
-                <div class="moreinfo">
-                <div>
-                  <img src="/assets/png/Timer.png" alt="" />
-                  <p class="light-text">30 Minutes</p>
-                </div>
-                <div>
-                  <img src="/assets/png/ForkKnife.png" alt="" />
-                  <p class="light-text">Snack</p>
-                </div>
+          <div class="grid-box">
+            <img src="/assets/png/Group-2.png" alt="">
+            <div class="recette-info">
+              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <div class="moreinfo">
+              <div>
+                <img src="/assets/png/Timer.png" alt="" />
+                <p class="light-text">30 Minutes</p>
               </div>
+              <div>
+                <img src="/assets/png/ForkKnife.png" alt="" />
+                <p class="light-text">Snack</p>
               </div>
             </div>
-            <div class="grid-box">
-              <img src="/assets/png/burger.png" alt="">
-              <div class="recette-info">
-                <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
-                <div class="moreinfo">
-                <div>
-                  <img src="/assets/png/Timer.png" alt="" />
-                  <p class="light-text">30 Minutes</p>
-                </div>
-                <div>
-                  <img src="/assets/png/ForkKnife.png" alt="" />
-                  <p class="light-text">Snack</p>
-                </div>
+            </div>
+          </div>
+          <div class="grid-box">
+            <img src="/assets/png/Group-3.png" alt="">
+            <div class="recette-info">
+              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <div class="moreinfo">
+              <div>
+                <img src="/assets/png/Timer.png" alt="" />
+                <p class="light-text">30 Minutes</p>
               </div>
+              <div>
+                <img src="/assets/png/ForkKnife.png" alt="" />
+                <p class="light-text">Snack</p>
               </div>
             </div>
-            <div class="grid-box">
-              <img src="/assets/png/burger.png" alt="">
-              <div class="recette-info">
-                <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
-                <div class="moreinfo">
-                <div>
-                  <img src="/assets/png/Timer.png" alt="" />
-                  <p class="light-text">30 Minutes</p>
-                </div>
-                <div>
-                  <img src="/assets/png/ForkKnife.png" alt="" />
-                  <p class="light-text">Snack</p>
-                </div>
+            </div>
+          </div>
+          <div class="grid-box" style="background-color: transparent; object-fit: cover;">
+            <img src="/assets/png/Ads.png" alt="">
+          </div>
+          <div class="grid-box">
+            <img src="/assets/png/Group-4.png" alt="">
+            <div class="recette-info">
+              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <div class="moreinfo">
+              <div>
+                <img src="/assets/png/Timer.png" alt="" />
+                <p class="light-text">30 Minutes</p>
               </div>
+              <div>
+                <img src="/assets/png/ForkKnife.png" alt="" />
+                <p class="light-text">Snack</p>
               </div>
             </div>
-            <div class="grid">
-              <div class="grid-box">
-                <img src="/assets/png/burger.png" alt="">
-                <div class="recette-info">
-                  <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
-                  <div class="moreinfo">
-                  <div>
-                    <img src="/assets/png/Timer.png" alt="" />
-                    <p class="light-text">30 Minutes</p>
-                  </div>
-                  <div>
-                    <img src="/assets/png/ForkKnife.png" alt="" />
-                    <p class="light-text">Snack</p>
-                  </div>
-                </div>
-                </div>
+            </div>
+          </div>
+          <div class="grid-box">
+            <img src="/assets/png/Group-5.png" alt="">
+            <div class="recette-info">
+              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <div class="moreinfo">
+              <div>
+                <img src="/assets/png/Timer.png" alt="" />
+                <p class="light-text">30 Minutes</p>
               </div>
-              <div class="grid-box">
-                <img src="/assets/png/burger.png" alt="">
-                <div class="recette-info">
-                  <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
-                  <div class="moreinfo">
-                  <div>
-                    <img src="/assets/png/Timer.png" alt="" />
-                    <p class="light-text">30 Minutes</p>
-                  </div>
-                  <div>
-                    <img src="/assets/png/ForkKnife.png" alt="" />
-                    <p class="light-text">Snack</p>
-                  </div>
-                </div>
-                </div>
+              <div>
+                <img src="/assets/png/ForkKnife.png" alt="" />
+                <p class="light-text">Snack</p>
               </div>
-              <div class="grid-box">
-                <img src="/assets/png/burger.png" alt="">
-                <div class="recette-info">
-                  <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
-                  <div class="moreinfo">
-                  <div>
-                    <img src="/assets/png/Timer.png" alt="" />
-                    <p class="light-text">30 Minutes</p>
-                  </div>
-                  <div>
-                    <img src="/assets/png/ForkKnife.png" alt="" />
-                    <p class="light-text">Snack</p>
-                  </div>
-                </div>
-                </div>
-              </div> 
+            </div>
+            </div>
+          </div>
+          <div class="grid-box">
+            <img src="/assets/png/Group-6.png" alt="">
+            <div class="recette-info">
+              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <div class="moreinfo">
+              <div>
+                <img src="/assets/png/Timer.png" alt="" />
+                <p class="light-text">30 Minutes</p>
+              </div>
+              <div>
+                <img src="/assets/png/ForkKnife.png" alt="" />
+                <p class="light-text">Snack</p>
+              </div>
+            </div>
+            </div>
+          </div>
         </div>
+      </div> 
+      <section>
+        <div class="chef-info">
+          <div>
+            <h2>Everyone can be a
+              chef in their own kitchen
+            </h2>
+            <p class="light-text">
+              Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqut enim ad minim 
+            </p>
+          </div>
+          <button class="main-button">Learn More</button>
+        </div>
+        <div class="chef-img">
+          <img src="/assets/png/chef.png" alt="">
+        </div>
+      </section>
+      <div class="insta-section">
+        <div class="top-info">
+          <h2>Check out @foodieland on Instagram</h2>
+          <p class="light-text " style="text-align: center;">Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqut enim ad minim   </p>
+        </div>
+        <div class="insta-img">
+          <img src="/assets/png/Post.png" alt="">
+          <img src="/assets/png/Post-1.png" alt="">
+          <img src="/assets/png/Post-2.png" alt="">
+          <img src="/assets/png/Post-3.png" alt="">
+        </div>
+        <button class="main-button">
+          Visit Our Instagram
+          <img src="/assets/svg/instaLogo.svg" alt="">
+        </button>
       </div>
+      <div class="input-section">
+        <div class="top-info">
+          <h2>Deliciousness to your inbox</h2>
+          <p class="light-text " style="text-align: center;">Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqut enim ad minim   </p>
+        </div>
+        <form action="">
+          <input placeholder="You're email address" type="text">
+          <button class="main-button">Subscribe</button>
+        </form>
+      </div>
+      <footer>
+        <div class="footer-top">
+          <div class="footer-left">
+            <img src="/assets/svg/Foodieland..svg" alt="">
+            <p class="light-text">
+              Lorem ipsum dolor sit amet, consectetuipisicing elit, 
+            </p>
+          </div>
+          <div class="footer-right">
+            <ul>
+              <li>Recipes</li>
+              <li>Blog</li>
+              <li>Contact</li>
+              <li>About us</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div></div>
+          <p class="light-text">
+            © 2024 Boularand Killian / Ecole By cci
+          </p>
+          <div class="social">
+            <img class="social-icon" src="/assets/svg/facebook.svg" alt="" />
+            <img class="social-icon" src="/assets/svg/twitter.svg" alt="" />
+            <img class="social-icon" src="/assets/svg/instagram.svg" alt="" />
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
