--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             </div>
           </div>
           <div class="grid-box">
-            <img src="/assets/png/Group.png" alt="">
+            <img src="/assets/png/Group-2.png" alt="">
             <div class="recette-info">
-              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <h3>Fresh Lime Roasted Salmon with Ginger Sauce</h3>
               <div class="moreinfo">
               <div>
                 <img src="/assets/png/Timer.png" alt="" />
@@ -139,15 +139,31 @@
               </div>
               <div>
                 <img src="/assets/png/ForkKnife.png" alt="" />
-                <p class="light-text">Snack</p>
+                <p class="light-text">Fish</p>
               </div>
+            </div>
+            </div>
+          </div>
+          <div class="grid-box">
+            <img src="/assets/png/Group-5.png" alt="">
+            <div class="recette-info">
+              <h3>Strawberry Oatmeal Pancake with Honey Syrup</h3>
+              <div class="moreinfo">
+              <div>
+                <img src="/assets/png/Timer.png" alt="" />
+                <p class="light-text">30 Minutes</p>
+              </div>
+              <div>
+                <img src="/assets/png/ForkKnife.png" alt="" />
+                <p class="light-text">Breakfast</p>
+              </div> 
             </div>
             </div>
           </div>
           <div class="grid-box">
             <img src="/assets/png/Group-1.png" alt="">
             <div class="recette-info">
-              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <h3>Fresh and Healthy Mixed Mayonnaise Salad</h3>
               <div class="moreinfo">
               <div>
                 <img src="/assets/png/Timer.png" alt="" />
@@ -155,15 +171,15 @@
               </div>
               <div>
                 <img src="/assets/png/ForkKnife.png" alt="" />
-                <p class="light-text">Snack</p>
+                <p class="light-text">Healthy</p>
               </div>
             </div>
             </div>
           </div>
           <div class="grid-box">
-            <img src="/assets/png/Group-2.png" alt="">
+            <img src="/assets/png/Group-4.png" alt="">
             <div class="recette-info">
-              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <h3>Chicken Meatballs with Cream Cheese</h3>
               <div class="moreinfo">
               <div>
                 <img src="/assets/png/Timer.png" alt="" />
@@ -171,23 +187,7 @@
               </div>
               <div>
                 <img src="/assets/png/ForkKnife.png" alt="" />
-                <p class="light-text">Snack</p>
-              </div>
-            </div>
-            </div>
-          </div>
-          <div class="grid-box">
-            <img src="/assets/png/Group-3.png" alt="">
-            <div class="recette-info">
-              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
-              <div class="moreinfo">
-              <div>
-                <img src="/assets/png/Timer.png" alt="" />
-                <p class="light-text">30 Minutes</p>
-              </div>
-              <div>
-                <img src="/assets/png/ForkKnife.png" alt="" />
-                <p class="light-text">Snack</p>
+                <p class="light-text">Meat</p>
               </div>
             </div>
             </div>
@@ -196,9 +196,9 @@
             <img src="/assets/png/Ads.png" alt="">
           </div>
           <div class="grid-box">
-            <img src="/assets/png/Group-4.png" alt="">
+            <img src="/assets/png/Group.png" alt="">
             <div class="recette-info">
-              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <h3>Fruity Pancake with Orange & Blueberry</h3>
               <div class="moreinfo">
               <div>
                 <img src="/assets/png/Timer.png" alt="" />
@@ -206,15 +206,15 @@
               </div>
               <div>
                 <img src="/assets/png/ForkKnife.png" alt="" />
-                <p class="light-text">Snack</p>
+                <p class="light-text">Sweet</p>
               </div>
             </div>
             </div>
           </div>
           <div class="grid-box">
-            <img src="/assets/png/Group-5.png" alt="">
+            <img src="/assets/png/Group-3.png" alt="">
             <div class="recette-info">
-              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <h3>The Best Easy One Pot Chicken and Rice</h3>
               <div class="moreinfo">
               <div>
                 <img src="/assets/png/Timer.png" alt="" />
@@ -230,7 +230,7 @@
           <div class="grid-box">
             <img src="/assets/png/Group-6.png" alt="">
             <div class="recette-info">
-              <h3>Gig and Juicy Wagyu Beef Cheeseburger</h3>
+              <h3>The Creamiest Creamy Chicken and Bacon Pasta</h3>
               <div class="moreinfo">
               <div>
                 <img src="/assets/png/Timer.png" alt="" />
@@ -238,7 +238,7 @@
               </div>
               <div>
                 <img src="/assets/png/ForkKnife.png" alt="" />
-                <p class="light-text">Snack</p>
+                <p class="light-text">Noodles</p>
               </div>
             </div>
             </div>
